--- a/s/sc/scr/screenr.com.html
+++ b/s/sc/scr/screenr.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the screenr.com privacy policy that was archived on 2013-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130605091944id_/http%3A//www.screenr.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the screenr.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225173610id_/http%3A//www.screenr.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <!-- TITLE -->
@@ -12,7 +12,7 @@
     <!-- META -->
     <meta http-equiv="content-type" content="text/html; charset=utf-8"><meta name="robots" content="index, follow"><meta name="description" content="Screenr | Instant screencasts: Just click record. Screenr’s web-based screen recorder makes it a breeze to create and share your screencasts around the web. Just click the record button, capture your screen &amp; voice, and share the link. Some people even call it fun!"><meta name="keywords" content="screencasts, screencasting, record screen, web-based screen recording, screeencasts for twitter"><meta name="author" content="Articulate.com"> 
     <meta name="copyright" content="Copyright 2013 Articulate Global Inc. All rights reserved.">
-    <meta name="build" content="1.0.4793.28558">
+    <meta name="build" content="1.0.4909.25711">
 
 	<!-- FEED --> 
 	
@@ -36,7 +36,7 @@
     <script src="http://cdn.screenr.com/public/1.8/javascript/ie_pngfix.js"></script>
     <![endif]-->
 
-    <script type="text/javascript" async="" src="https://d1ros97qkrwjf5.cloudfront.net/42/eum/rum.js"></script><script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+    <script type="text/javascript" async="" src="https://js-agent.newrelic.com/nr-100.js"></script><script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
     <script type="text/javascript">        !window.jQuery && document.write('<script type="text/javascript" src="http://cdn.screenr.com/public/1.8/javascript/jquery-1.4.2.min.js"><\/script>')</script><script type="text/javascript" src="http://cdn.screenr.com/public/1.8/javascript/jquery-1.4.2.min.js"></script>    
     <script type="text/javascript" src="http://cdn.screenr.com/public/1.8/javascript/css_browser_selector.js"> </script>
     <script type="text/javascript" src="http://cdn.screenr.com/public/1.8/javascript/sniffer.js"> </script>
@@ -317,7 +317,7 @@
         } catch (err) { }
     </script>  
 
-    <script type="text/javascript">(function(){var d=document;var e=d.createElement("script");e.type="text/javascript";e.async=true;e.src="https://d1ros97qkrwjf5.cloudfront.net/42/eum/rum.js";var s=d.getElementsByTagName("script")[0];s.parentNode.insertBefore(e,s);})();NREUMQ.push(["nrf2","beacon-1.newrelic.com","9183271a77",384702,"ZlQENhRWCBcCU0wICl8eIg0SeQMQIF9WFRdeXQoHFBguCw5VFxEXWEcHAR8=",0,10,new Date().getTime()])</script>
+    <script type="text/javascript">(function(){var d=document;var e=d.createElement("script");e.type="text/javascript";e.async=true;e.src="https://js-agent.newrelic.com/nr-100.js";var s=d.getElementsByTagName("script")[0];s.parentNode.insertBefore(e,s);})();NREUMQ.push(["nrf2","beacon-1.newrelic.com","9183271a77",384702,"ZlQENhRWCBcCU0wICl8eIg0SeQMQIF9WFRdeXQoHFBguCw5VFxEXWEcHAR8=",0,13,new Date().getTime()])</script>
 
 
 </body></html>
