--- a/j/ju/jus/justhookuplive.com.html
+++ b/j/ju/jus/justhookuplive.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the justhookuplive.com privacy policy that was archived on 2013-06-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130601174039id_/http%3A//www.justhookuplive.com/privacy.html%3F) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the justhookuplive.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225204116id_/http%3A//www.justhookuplive.com/privacy.html%3F) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
-  <title>JustHookUpLive - Privacy</title>
+  <title>JustHookUpLive - Privacy Policy</title>
 
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="http://m1.nsimg.net/2.0/shared/css/20130501/style-min.css" media="all">
+<link rel="stylesheet" type="text/css" href="http://m1.nsimg.net/2.0/shared/css/20130919/style-min.css" media="all">
 <link rel="stylesheet" type="text/css" href="http://m1.nsimg.net/2.0/skin/jhul/css/20120613/style-skin-min.css" media="all">
 <!--[if IE 6]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20130501/ie6.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
 <!--[if IE 7]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20130501/ie7.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
@@ -179,13 +179,16 @@
 
 <h1>Contact</h1>
 <p>If you have any questions about this Privacy Policy, please contact our customer service department at <a href="/contactsupport.php?">support@justhookuplive.com</a> and provide us with your name, your JustHookUpLive login name, and any information you feel is important.</p>
+
 <p>The address for correspondence by post is</p>
-<p>Streamates Limited<br>
-c/o Ariel Secretaries Limited<br>
-196, Arch Makarios Ave, Ariel Corner,<br>
-1st Flr, Office 102<br>
-P.O. Box 57528<br>
-3316 Limassol - Cyprus</p>
+<address>
+  ICF Technology, Inc.<br>
+  PO Box 21508<br>
+  Seattle, WA 98111<br>
+  USA
+</address>
+
+
   </div>
 </div>
 
@@ -263,7 +266,7 @@ P.O. Box 57528<br>
 <noscript>
   <img class="hide" src="http://www.justhookuplive.com/pixel/nojs.php" alt="">
 </noscript>
-<script type="text/javascript" src="http://m2.nsimg.net/cache/js/bundle/naiad/20130416/naiad.js"></script>
+<script type="text/javascript" src="http://m2.nsimg.net/cache/js/bundle/naiad/20131217/naiad.js"></script>
 <script type="text/javascript">
 window.suggestmeyes_loaded = true;
 Naiad.Init({mediabase:'http://m1.nsimg.net',state:'',wwwbase:location.protocol+'//'+location.hostname});
@@ -287,7 +290,15 @@ Naiad.OnDomReadyQueue([ 50, function() {
 <script id="sanet" type="text/javascript">
 try
 {
-  SAN.Naiad.init({cookie_domain: '.justhookuplive.com'});
+  if (typeof Naiad !== 'undefined' && Naiad.OnDomReadyQueue) {
+    Naiad.OnDomReadyQueue([1, function () {
+      SAN.Naiad.init({cookie_domain: '.justhookuplive.com'});
+    }]);
+  } else {
+    $(function () {
+      SAN.Naiad.init({cookie_domain: '.justhookuplive.com'});
+    });
+  }
 }
 catch(e)
 {
