--- a/h/ho/hot/hotcams.com.html
+++ b/h/ho/hot/hotcams.com.html
@@ -1,21 +1,22 @@
-<!--The following is the downloaded HTML source of the hotcams.com privacy policy that was archived on 2012-11-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20121110093617id_/http%3A//www.hotcams.com/privacy.html%3F) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hotcams.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225210606id_/http%3A//www.hotcams.com/privacy.html%3F) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
-  <title>Hotcams - Privacy</title>
+  <title>Hotcams - Privacy Policy</title>
 
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="http://m1.nsimg.net/2.0/shared/css/20121017/style-min.css" media="all">
+<link rel="stylesheet" type="text/css" href="http://m1.nsimg.net/2.0/shared/css/20130919/style-min.css" media="all">
 <link rel="stylesheet" type="text/css" href="http://m1.nsimg.net/2.0/skin/htc/css/20110701/style-skin-min.css" media="all">
-<!--[if IE 6]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20120125/ie6.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
-<!--[if IE 7]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20120125/ie7.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
-<!--[if IE 8]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20120125/ie8.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
+<!--[if IE 6]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20130501/ie6.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
+<!--[if IE 7]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20130501/ie7.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
+<!--[if IE 8]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20130501/ie8.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
 <meta name="description" content="Hotcams features live webcam models streaming direct to you from their homes and studios around the world. Sexy webcam online strip shows, sex shows, you name it.">
 <meta name="keywords" content="Hotcams, free, live, chat, cams, cam, webcam, private, videos, picture, sex, straight, gay, asian, shemale, latina, bdsm, tranny">
 <meta name="RATING" content="RTA-5042-1996-1400-1577-RTA">
 <link rel="canonical" href="http://www.hotcams.com/privacy.html">
 <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
 
 
 
@@ -28,7 +29,7 @@
 </head>
 <body>
 
-<div id="header-container">
+<div id="header-container" class="container-bg-width">
   <div class="header clearfix ie6-login-fix">
     <h1 class="left"><a href="http://www.hotcams.com/" title="Hotcams Live Cams, Free Sex Cams, Sex 24/7">Hotcams Live Cams, Free Sex Cams, Sex 24/7</a></h1>
     <div class="login">
@@ -66,7 +67,7 @@
     </div>
   </div>
 </div>
-<div id="nav-row-container">
+<div id="nav-row-container" class="container-bg-width">
   <div id="nav-row" class="clearfix">
     <div class="header">
       <ul class="nav-primary">
@@ -98,11 +99,11 @@
 
 
 
-<div id="wrapper-container">
+<div id="wrapper-container" class="container-bg-width">
 
 <div id="wrapper" class="clearfix">
   <div id="docs">
-    <div class="breadcrumb"><a href="http://www.hotcams.com" class="breadcrumb-home">Home</a><span class="breadcrumb-separator"> / </span><span class="breadcrumb-current">Privacy Policy</span></div>
+    <div class="breadcrumb"><a href="http://www.hotcams.com/" class="breadcrumb-home">Home</a><span class="breadcrumb-separator"> / </span><span class="breadcrumb-current">Privacy Policy</span></div>
     <h1>Your Acceptance</h1>
 <p>By using our sites, you signify your agreement to the privacy policies described herein. If you do not agree with our privacy policies, please do not use our site or service. If we make any substantial changes in the way we use your personal information we will notify you by posting a prominent announcement on our pages or we will email you at our discretion.</p>
 
@@ -140,13 +141,16 @@
 
 <h1>Contact</h1>
 <p>If you have any questions about this Privacy Policy, please contact our customer service department at <a href="/contactsupport.php?">support@hotcams.com</a> and provide us with your name, your Hotcams login name, and any information you feel is important.</p>
+
 <p>The address for correspondence by post is</p>
-<p>Streamates Limited<br>
-c/o Ariel Secretaries Limited<br>
-196, Arch Makarios Ave, Ariel Corner,<br>
-1st Flr, Office 102<br>
-P.O. Box 57528<br>
-3316 Limassol - Cyprus</p>
+<address>
+  ICF Technology, Inc.<br>
+  PO Box 21508<br>
+  Seattle, WA 98111<br>
+  USA
+</address>
+
+
   </div>
 </div>
 
@@ -159,7 +163,7 @@ P.O. Box 57528<br>
 </div>
   </div>
 </div><!-- #wrapper-container -->
-<div id="footer-container">
+<div id="footer-container" class="container-bg-width">
   <div class="footer">
     <div class="footer-content clearfix">
       <div class="footer-column">
@@ -167,7 +171,7 @@ P.O. Box 57528<br>
           <h3>Navigate</h3>
           <ul>
             <li><a href="http://www.hotcams.com/?" title="Hotcams Live Cams, Free Sex Cams, Sex 24/7">Homepage</a><a href="http://www.hotcams.com/?"></a></li>
-            <li><a href="http://www.hotcams.com/advanced-search.html?">Advanced Search</a></li>
+            <li><a href="http://www.hotcams.com/advanced-search.html?" id="ta-footer-adv-search">Advanced Search</a></li>
             <li><a href="http://www.hotcams.com/new.php?">New Models</a></li>
             <li><a href="http://www.hotcams.com/about-us.html?" title="About Hotcams">About Us</a></li>
             <li><a href="http://www.hotcams.com/login.php">Member Login</a></li>
@@ -187,9 +191,7 @@ P.O. Box 57528<br>
   <p>
     We are seeking talented technical and creative people to join our team.<br>
     <a href="http://www.naiaddev.com/" target="_blank">Check out our job listings here.</a>
-    
   </p>
-  
 </div>
       </div>
       <div class="footer-column right-column">
@@ -214,7 +216,7 @@ P.O. Box 57528<br>
             <p>All models appearing on this website are 18 years or older.</p>
             <img src="http://m1.nsimg.net/shared/rta.gif" width="88" height="31" border="0" alt="">&nbsp;<img src="http://m1.nsimg.net/shared/asacp.gif" width="88" height="31" border="0" alt="">
           </div>
-          <p class="copyright"><b>© 2003 – 2012 hotcams.com. All rights reserved.</b></p>
+          <p class="copyright"><b>© 2003 – 2013 hotcams.com. All rights reserved.</b></p>
         </div>
       </div>
     </div>
@@ -229,12 +231,14 @@ P.O. Box 57528<br>
 <noscript>
   <img class="hide" src="http://www.hotcams.com/pixel/nojs.php" alt="">
 </noscript>
-<script type="text/javascript" src="http://m2.nsimg.net/cache/js/bundle/naiad/20120927/naiad.js"></script>
+<script type="text/javascript" src="http://m2.nsimg.net/cache/js/bundle/naiad/20131217/naiad.js"></script>
 <script type="text/javascript">
+window.suggestmeyes_loaded = true;
 Naiad.Init({mediabase:'http://m1.nsimg.net',state:'',wwwbase:location.protocol+'//'+location.hostname});
 
 Naiad.OnDomReadyQueue([ 50, function() {
   Naiad.BasicUser.DisplaySalutation( 'Welcome back <span>[#nickname]</span>' );
+  Naiad.Util.SearchAnythingChecker( 'Search Anything', '.search-form', '#search-anything');
   Naiad.Util.InitLanguageSelect( '#choose-language A', '#choose-language SPAN' );
   Naiad.Util.InitSupportChat( 'A.supportchatlink' );
   var naiad_jp = Naiad.Y.one('#naiad_jp');
@@ -247,11 +251,19 @@ Naiad.OnDomReadyQueue([ 50, function() {
 }, '' ]);
 </script>
 
- <script type="text/javascript" src="http://e.sexad.net/S20121109/bundle.js"></script>
+ <script type="text/javascript" src="http://e.sexad.net/S20130514/bundle.js"></script>
 <script id="sanet" type="text/javascript">
 try
 {
-  SAN.Naiad.init({cookie_domain: '.hotcams.com'});
+  if (typeof Naiad !== 'undefined' && Naiad.OnDomReadyQueue) {
+    Naiad.OnDomReadyQueue([1, function () {
+      SAN.Naiad.init({cookie_domain: '.hotcams.com'});
+    }]);
+  } else {
+    $(function () {
+      SAN.Naiad.init({cookie_domain: '.hotcams.com'});
+    });
+  }
 }
 catch(e)
 {
