--- a/h/ho/hom/homeseer.com.html
+++ b/h/ho/hom/homeseer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the homeseer.com privacy policy that was archived on 2013-01-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130115051032id_/http%3A//homeseer.com/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the homeseer.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225215807id_/http%3A//www.homeseer.com/privacy_policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html lang="en"><!-- InstanceBegin template="/Templates/main-common2.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
