--- a/m/me/mem/membergate.com.html
+++ b/m/me/mem/membergate.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the membergate.com privacy policy that was archived on 2013-05-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130501185215id_/http%3A//www.membergate.com/public/department26.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the membergate.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225225944id_/http%3A//www.membergate.com/public/department26.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <meta content="text/html" http-equiv="Content-Type">
@@ -101,14 +101,13 @@ hs.transitions = ["fade"];
 								<table border="0" cellpadding="5" cellspacing="0" width="100%">
 									<tbody><tr><td bgcolor="#F8F8F8">
 						<a class="navleft" href="http://www.membergate.com/public/department11.cfm" title="Overview"><img src="/public/images/navleft.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Overview</a><br>
-						<a class="navleft" href="http://www.membergate.com/public/MemberGate_Sign_Up.cfm" title="Order MemberGate"><img src="/public/images/navleft.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Order MemberGate</a><br>
+						<a class="navleft" href="http://www.membergate.com/public/department38.cfm" title="Order MemberGate"><img src="/public/images/navleft.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Order MemberGate</a><br>
 						<a class="navleft" href="http://www.membergate.com/public/department4.cfm" title="Benefits"><img src="/public/images/navleft.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Benefits</a><br>
 						<a class="navleft" href="http://www.membergate.com/public/department22.cfm" title="Features"><img src="/public/images/navleft.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Features</a><br>
 						<a class="navleft" href="http://www.membergate.com/public/336.cfm" title="Pricing"><img src="/public/images/navleft.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Pricing</a><br>
 						<a class="navleft" href="http://www.membergate.com/public/department5.cfm" title="Questions"><img src="/public/images/navleft.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Questions</a><br>
 						<a class="navleft" href="http://www.membergate.com/demo/members/login.cfm" title="Run the Demo"><img src="/public/images/navleft.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Run the Demo</a><br>
-						<a class="navleft" href="http://www.membergate.com/public/department7.cfm" title="Support"><img src="/public/images/navleft.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Support</a><br>
-						<a class="navleft" href="http://www.membergate.com/public/department28.cfm" title="Card Processing"><img src="/public/images/navleft.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Card Processing</a><br> 
+						<a class="navleft" href="http://www.membergate.com/public/department7.cfm" title="Support"><img src="/public/images/navleft.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Support</a><br> 
  </td></tr></tbody></table></td></tr> </tbody></table></td></tr>
         			<tr><td height="05"></td></tr>
 				<!-- Category 2 -->
@@ -181,8 +180,7 @@ This site also gives users the following options for removing their information 
 						<a class="navright" href="http://www.membergate.com/public/department5.cfm" title="Questions"><img src="/public/images/navright.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Questions</a><br>
 						<a class="navright" href="http://www.membergate.com/demo/members/login.cfm" title="Run the Demo"><img src="/public/images/navright.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Run the Demo</a><br>
 						<a class="navright" href="http://www.membergate.com/public/department7.cfm" title="Support"><img src="/public/images/navright.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Support</a><br>
-						<a class="navright" href="http://www.membergate.com/public/department10.cfm" title="Active Sites"><img src="/public/images/navright.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Active Sites</a><br>
-						<a class="navright" href="http://www.membergate.com/public/department28.cfm" title="Card Processing"><img src="/public/images/navright.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Card Processing</a><br> 
+						<a class="navright" href="http://www.membergate.com/public/department10.cfm" title="Active Sites"><img src="/public/images/navright.gif" border="0" alt="" height="18" width="11" align="middle" style="padding-right:3px;">Active Sites</a><br> 
 </td></tr></tbody></table></td></tr></tbody></table></td></tr>
         			<tr><td height="05"></td></tr><!-- Category 2 -->
 					<tr><td><table width="100%" cellspacing="0" cellpadding="3" border="0"><tbody><tr><td class="navheadright">&nbsp;RESOURCES</td></tr></tbody></table></td></tr>
@@ -258,12 +256,14 @@ This site also gives users the following options for removing their information 
 											<table border="0" cellpadding="2" cellspacing="1" width="950">
  												<tbody><tr>
 													<td class="footer" align="center" bgcolor="#F8F8F8">	
-														<a class="footer" href="http://www.membergate.com/public/main.cfm" title="Home">Home</a> 			
-															 | <a class="footer" href="http://www.membergate.com/public/MemberGate_Sign_Up.cfm" title="Order MemberGate">Order MemberGate</a>		   
+														<a class="footer" href="http://www.membergate.com/public/main.cfm" title="Home">Home</a> 		   
+															 | <a class="footer" href="http://www.membergate.com/public/department38.cfm" title="Order MemberGate">Order MemberGate</a>		   
 															 | <a class="footer" href="http://www.membergate.com/public/department37.cfm" title="Our Guarantee">Our Guarantee</a>		   
 															 | <a class="footer" href="http://www.membergate.com/public/department26.cfm" title="Privacy Policy">Privacy Policy</a>		   
 															 | <a class="footer" href="http://www.membergate.com/public/department24.cfm" title="Testimonials">Testimonials</a>		   
 															 | <a class="footer" href="http://www.membergate.com/public/department10.cfm" title="Active Sites">Active Sites</a>
+
+
 														<br><br>
 														<span class="official"><font color="#336699">2013 MemberGate Solutions <br>
 All Rights Reserved. Reproduction without permission prohibited.<br>MemberGate is a registered Trademark of MemberGate Solutions, Inc.<br></font> <script type="text/javascript">
