--- a/g/go/goo/goodsearch.com.html
+++ b/g/go/goo/goodsearch.com.html
@@ -1,18 +1,30 @@
-<!--The following is the downloaded HTML source of the goodsearch.com privacy policy that was archived on 2013-05-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130528051732id_/http%3A//www.goodsearch.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the goodsearch.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225232813id_/http%3A//www.goodsearch.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class=""><head><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
-<link href="/assets/application-aa87c8edfc9ed931d1d4a65f398c97f3.css" media="all" rel="stylesheet" type="text/css">
+<meta content="authenticity_token" name="csrf-param">
+<meta content="+sKVbj2I6SWiZRz6wp3Fm2pv+9NjQUMnuTjZ/9gaT9Y=" name="csrf-token">
+
+
+
+
+
+
+
+
+
+
+
+
 <link href="//fonts.googleapis.com/css?family=Open+Sans:400,600,300" media="screen" rel="stylesheet" type="text/css">
-<script>window.gon = {};gon.facebook_redirect_url="https://www.goodsearch.com/users/facebook";gon.google_analytics_tag="UA-7577333-1";gon.segment_io_api_key="zovlypwdo4";gon.woopra_email="d2a59d80-a983-0130-d993-40408f98a3d8@analytics-email.com";gon.track_page_view=true;gon.user_properties={"User type":"visitor","email":"d2a59d80-a983-0130-d993-40408f98a3d8@analytics-email.com","Has charity":"no","DOB":"unknown","Gender":"unknown"};gon.userp_id=0;gon.track_guid="d2a59d80-a983-0130-d993-40408f98a3d8";gon.enable_analytics=true;</script>
-<script src="/assets/pages/generic_page-1c4489ad9845acf16eaec1e6a797c0c6.js" type="text/javascript"></script>
+<link href="/assets/symbol_font-93b7912ed4eb705d1a80e929c5824e29.css" media="screen" rel="stylesheet" type="text/css">
+<link href="/assets/application-298318f0dbd643916ed124f95619ca2b.css" media="all" rel="stylesheet" type="text/css">
+<script>window.gon = {};gon.redirect_url="https://www.goodsearch.com/users/facebook";gon.google_analytics_tag="UA-7577333-1";gon.segment_io_api_key="zovlypwdo4";gon.woopra_email="64f03c30-4f46-0131-b796-3c764e054f07@analytics-email.com";gon.track_page_view=true;gon.userp_id=0;gon.charity_id=null;gon.user_properties={"User type":"visitor","email":"64f03c30-4f46-0131-b796-3c764e054f07@analytics-email.com","Has charity":"no","age":"unknown","Registration Date":"unknown","Gender":"unknown","Charity":"undefined"};gon.track_guid="64F03C30-4F46-0131-B796-3C764E054F07";gon.enable_analytics=true;gon.mobile=false;</script>
+<script src="/assets/pages/generic_page-91f070abef40505e933df72f8fc42294.js" type="text/javascript"></script>
 <title>goodsearch - privacy policy</title>
 
-<script src="https://cdns.gigya.com/js/socialize.js?apiKey=2_NuaXKSeFdDTYFN4hIjXCit6g2sbl6_uOqkb0VCc4nhDmisUWxt0ikgWR3UON7Rsh" type="text/javascript"></script>
-<meta content="authenticity_token" name="csrf-param">
-<meta content="SYIX7/LVmUxUi1LMxbpu7a44Yz9DUP9t/v8SIRR1dZc=" name="csrf-token">
 </head>
-<body class="info-privacy">
+<body class="info-privacy without-cause">
 <div class="" id="navbar">
 <div class="good-style good-responsive-content">
 <div class="inner">
@@ -28,7 +40,7 @@
 <a href="/" class="track-goodsearch-global-nav">goodsearch</a>
 </li>
 <li class="web selected">
-<a href="/" class="search track-web-global-nav">web</a>
+<a href="/search-web" class="search track-web-global-nav">web</a>
 </li>
 <li class="images ">
 <a href="/search-image" class="search track-images-global-nav">images</a>
@@ -90,6 +102,12 @@
 <div class="nav-dropdown">
 <div class="line-block"></div>
 <ul class="white-list">
+<li class="swipe">
+<a href="/goodswipe" class="track-goodswipe-global-nav"><div class="icon-wrapper">
+<div class="icon"></div>
+</div>
+<span class="good">good</span><span class="sub-brand">swipe</span><span class="new">new</span>
+</a></li>
 <li class="games">
 <a href="/goodgames" class="track-goodgames-global-nav"><div class="icon-wrapper">
 <div class="icon"></div>
@@ -150,159 +168,24 @@
 <div class="logged-out">
 <a href="/Registration.aspx?WMode=LOGIN" class="track-login-global-nav">log in</a>
 <div class="nav-register">
-/ <a href="/Registration.aspx" class="track-register-link register-modal track-reg-global-nav">sign up</a>
+/ <a href="/register" class="track-register-link track-reg-global-nav ">sign up</a>
 </div>
-</div>
-<div class="hidden">
-<div id="registration">
-<img alt="Swoosh" class="swoosh" src="/assets/swoosh.png">
-<img alt="Modal_close" class="simplemodal-close track-x-button" src="/assets/modal_close-0e4106e011834a5706979c36d53e8dbc.png">
-<div class="top">
-<div class="logo" title="goodsearch"></div>
-<div class="without-cause">
-simply do good
-<div class="facebook">
-<div class="label">
-<div class="facebook-login track-facebook-login-page-1">
-Sign up with Facebook
-</div>
-</div>
-</div>
-
-</div>
-<div class="login-link">
-<a href="/Registration.aspx?WMode=LOGIN" class="track-registration-login-link">or login</a>
-</div>
-<div class="message">
-&amp; change the world through
-<br>
-your everyday actions!
-</div>
-
-</div>
-<div id="show-registration-form">
-<div class="arrow"></div>
-<a href="#" class="toggle-link track-registration-email-signup">or sign up with email</a>
-</div>
-<div class="clearfix"></div>
-<form accept-charset="UTF-8" action="https://www.goodsearch.com/users" class="new_user" data-validate="true" id="registration-form" method="post" novalidate="novalidate"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="SYIX7/LVmUxUi1LMxbpu7a44Yz9DUP9t/v8SIRR1dZc="></div><div class="required-notice">
-all fields are required
-</div>
-<input id="user_fname" name="user[fname]" placeholder="first name" size="30" type="text" value="">
-<input id="user_lname" name="user[lname]" placeholder="last name" size="30" type="text" value="">
-<input id="user_userp_email" name="user[userp_email]" placeholder="email" size="30" type="text" value="">
-<div class="hidden">
-<div class="custom-error-message">
-<label for="user_userp_email"><h2>
-oops! that email is already doing good
-</h2>
-<h4>
-please enter a new email or
-<a href="/Registration.aspx?WMode=LOGIN">login</a>
-</h4>
-</label></div>
-</div>
-<input id="user_pwd" name="user[pwd]" placeholder="password (6 characters or more)" size="30" type="password">
-<input name="user[mailing]" type="hidden" value="0"><input checked="checked" id="user_mailing" name="user[mailing]" type="checkbox" value="1">
-<label for="user_mailing">Keep me posted on ways to help my cause!</label>
-<div class="tos">
-By clicking sign up, you agree to our
-<a href="/terms">Terms of Service</a>
-</div>
-<div class="good-style">
-<input class="submit button regal-bg track-registration-signup" name="commit" type="submit" value="sign up">
-</div>
-<div class="clearfix"></div>
-<div class="facebook">
-<div class="label">
-<div class="facebook-login track-facebook-login-page-2">
-Sign up with Facebook
-</div>
-</div>
-</div>
-
-<div class="login-link">
-<a href="/Registration.aspx?WMode=LOGIN">or login</a>
-</div>
-<div class="clearfix"></div>
-</form>
-
-<script>//<![CDATA[
-if(window.ClientSideValidations===undefined)window.ClientSideValidations={};window.ClientSideValidations.disabled_validators=[];window.ClientSideValidations.number_format={"separator":".","delimiter":","};if(window.ClientSideValidations.patterns===undefined)window.ClientSideValidations.patterns = {};window.ClientSideValidations.patterns.numericality=/^(-|\+)?(?:\d+|\d{1,3}(?:\,\d{3})+)(?:\.\d*)?$/;if(window.ClientSideValidations.remote_validators_prefix===undefined)window.ClientSideValidations.remote_validators_prefix='';if(window.ClientSideValidations.forms===undefined)window.ClientSideValidations.forms={};window.ClientSideValidations.forms['registration-form'] = {"type":"ActionView::Helpers::FormBuilder","input_tag":"<div class=\"field_with_errors\"><span id=\"input_tag\" /><div class=\"bubble-message\"><label for=\"\" class=\"message\"></label><div class=\"notch outer\"/> <div class=\"notch inner\"/></div></div>","label_tag":"<div class=\"field_with_errors\"><label id=\"label_tag\" /></div>","validators":{"user[fname]":{"presence":[{"message":"please enter your first name"}]},"user[lname]":{"presence":[{"message":"please enter your last name"}]},"user[userp_email]":{"presence":[{"message":"please enter your email"}],"email":[{"message":"oops! that email is already doing good please enter a new email or login"}],"format":[{"message":"please enter a valid email format","with":/^[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,4}$/i}]},"user[pwd]":{"password_valid":[{"message":"please enter a password (6 characters or more)"}]}}};
-//]]></script>
-</div>
-
-</div>
-<div class="hidden">
-<div id="cause-selector">
-<img alt="Modal_close" class="simplemodal-close" src="/assets/modal_close-0e4106e011834a5706979c36d53e8dbc.png">
-<div class="top">
-<div class="message">
-<div id="intro">
-<h2>
-who do you
-</h2>
-<h3>
-want to help?
-</h3>
-</div>
-<div id="no-results">
-<h2>
-we couldn't find your cause in
-<br>
-our list of 100,000+ participating
-<br>
-non-profits and schools
-</h2>
-<h3>
-please re-try your search
-</h3>
-</div>
-<div id="select">
-<h2>select the cause</h2>
-<h3>you want to help</h3>
-</div>
-</div>
-<form accept-charset="UTF-8" action="/causes/search" class="good-search big" data-remote="true" data-type="html" id="cause-search" method="get"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"></div>
-<input id="redirect_path" name="redirect_path" type="hidden">
-<div class="query-box">
-<input class="query" id="query" name="query" placeholder="enter cause name here" type="text" value="">
-<input name="commit" type="submit" value="">
-</div>
-</form>
-
-</div>
-<div class="examples">
-<div class="circle">
-<img alt="Swoosh" class="swoosh" src="/assets/swoosh-83f97417d136d9cc10bb15a9e92e09ba.png">
-</div>
-<h2>looking for a cause to support?</h2>
-<h3>here are some of our community's favorites:</h3>
-<ul>
-<li class="choosecause-unicef"></li>
-<li class="choosecause-feedingamerica"></li>
-<li class="choosecause-aspca"></li>
-<li class="choosecause-sierraclub"></li>
-<li class="choosecause-standuptocancer"></li>
-<li class="choosecause-unitedway"></li>
-</ul>
-</div>
-<div id="cause-search-results"></div>
-</div>
-
 </div>
 </div>
 <div class="clearfix"></div>
 </div>
 </div>
-</div>
 
+</div>
 
 <div class="small good-content" id="header">
 <a href="/"><div id="logo" title="goodsearch"></div>
 </a><form accept-charset="UTF-8" action="/search-web" class="good-search small" id="search" method="get"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"></div>
 <input class="query small" id="keywords" name="keywords" type="text">
 <input id="search-button" type="submit" value="">
+<div class="warning">
+Please use this site honestly. Fraudulent searches will result in a charity being de-listed.
+</div>
 </form>
 
 <div id="powered-by-yahoo"></div>
@@ -312,11 +195,11 @@ please re-try your search
 
 <div class="good-content good-style">
 <h1>Privacy Policy</h1>
-<h4>Last Updated March 25, 2013</h4>
+<h4>Last Updated June 24, 2013</h4>
 <br>
 <h2>WHAT THIS PRIVACY POLICY COVERS</h2>
 <p>
-Goodsearch (including the Goodsearch Search Engine, Goodshop, Gooddining, Goodsurveys, Goodoffers, Goodgames and Goodtvads),
+Goodsearch (including the Goodsearch Search Engine, Goodshop, Gooddining, Goodsurveys, Goodoffers, Goodgames, Goodtvads and Goodswipe),
 takes your privacy seriously. Please read the following to learn more about our privacy policy. This policy covers how Goodsearch
 treats personal information that Goodsearch collects and receives, including information related to your past use of Goodsearch
 products and services. This policy does not apply to the practices of our partners who help us provide some of the services offered
@@ -351,6 +234,7 @@ information in order to use the following services:
 <li>Gooddining</li>
 <li>Goodsurveys</li>
 <li>Goodoffers</li>
+<li>Goodswipe</li>
 </ul>
 <p></p>
 <h2>INFORMATION SHARING AND DISCLOSURE</h2>
@@ -378,6 +262,11 @@ of Peanut Labs, Inc.
 Goodoffers—see
 <a href="http://www.trialpay.com/legal/privacy-policy/">privacy policy</a>
 of TrialPay
+</li>
+<li>
+Goodswipe—see
+<a href="https://www.plink.com/index.cfm?fuseaction=main.privacy">privacy policy</a>
+of Plink
 </li>
 </ul>
 </li>
@@ -474,17 +363,17 @@ Los Angeles, CA 90049
 <li><a href="/faq">faq</a></li>
 <li><a href="/addcharity.aspx">add charity or school</a></li>
 <li><a href="/spreadtheword">spread the word</a></li>
-<li><a href="/press.aspx">in the news</a></li>
-<li><a href="/charitylist.aspx">participating non profits</a></li>
+<li><a href="/press">in the news</a></li>
+<li><a href="/causes">participating non profits</a></li>
 <li>
 <a href="/goodto-go">good<span class="sub-brand to-go">to-go</span></a></li>
 <li><a href="/contact">contact us</a></li>
 </ul>
 </div>
-<p class="capitalized" id="copyright">
+<p class="upper-case" id="copyright">
 © 2013 Goodsearch LLC. U.S. Patent No. 7,769,738
 </p>
-<ul class="capitalized lower_nav">
+<ul class="upper-case lower_nav">
 <li><a href="/terms">Terms of Service</a></li>
 <li><a href="/privacy">Privacy Policy</a></li>
 <li><a href="/sitemap.aspx">Site Map</a></li>
@@ -494,17 +383,24 @@ Los Angeles, CA 90049
 </div>
 
 
+
+<!--[if (gte IE 6)&(lte IE 8)]>
+  <script type="text/javascript" src="/assets/selectivizr.js"></script>
+  <noscript><link rel="stylesheet" href="[fallback css]" /></noscript>
+<![endif]-->
+
+
 <script type="text/javascript">if (!NREUMQ.f) { NREUMQ.f=function() {
 NREUMQ.push(["load",new Date().getTime()]);
 var e=document.createElement("script");
 e.type="text/javascript";
 e.src=(("http:"===document.location.protocol)?"http:":"https:") + "//" +
-  "d1ros97qkrwjf5.cloudfront.net/42/eum/rum.js";
+  "js-agent.newrelic.com/nr-100.js";
 document.body.appendChild(e);
 if(NREUMQ.a)NREUMQ.a();
 };
 NREUMQ.a=window.onload;window.onload=NREUMQ.f;
 };
-NREUMQ.push(["nrfj","beacon-1.newrelic.com","1545260183","1149096","JlpWR0sLD1pTExddWgNaF0NLDRVXVRg=",0,140,new Date().getTime(),"","","","",""]);</script>
+NREUMQ.push(["nrfj","beacon-1.newrelic.com","1545260183","1149096","JlpWR0sLD1pTExddWgNaF0NLDRVXVRg=",0,46,new Date().getTime(),"","","","",""]);</script>
 
-<script type="text/javascript" src="https://d1ros97qkrwjf5.cloudfront.net/42/eum/rum.js"></script></body></html>
+<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
