--- a/r/re/rea/realsexdates.com.html
+++ b/r/re/rea/realsexdates.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the realsexdates.com privacy policy that was archived on 2013-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130610224218id_/http%3A//realsexdates.com/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the realsexdates.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226010851id_/http%3A//www.realsexdates.com/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
